Fix z-index when sidebar not in mobile mode. Fix some icon defs referring to glyphicons. Always show icon for custom sidebar menu items so we can have tooltips for them in minimised mode. Fix centering of opens in new tab icons.

--- a/assets/sass/components/_sidebar.scss
+++ b/assets/sass/components/_sidebar.scss
@@ -32,6 +32,7 @@
 	width: 44px;
 	overflow: visible;
 	pointer-events: auto;
+	z-index: 1045;
 	.course-menu-label {
 		display: none;
 	}
